--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
-        
+        classpath('com.tencent.tinker:tinker-patch-gradle-plugin:1.9.1')
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
