--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: 'config.gradle'// tinker-bugly的tinker-support.gradle和build.gradle需要用到同一个versionName，故加第三个gradle配置
 
 buildscript {
 
@@ -9,6 +10,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
         classpath('com.tencent.tinker:tinker-patch-gradle-plugin:1.9.1')
+        // tinkersupport插件(1.0.3以上无须再配置tinker插件）
+        classpath "com.tencent.bugly:tinker-support:1.1.1"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
